# bwg

./: .gitignore  readme.md
exchange_rate_service/: Dockerfile  env.sh  pyproject.toml  requirements.txt  setup.cfg
exchange_rate_service/docker/: docker-compose.yml
exchange_rate_service/nginx/: default.conf
exchange_rate_service/src/app/: alembic.ini  builder.py  locustfile.py  main.py  yoyo.ini
exchange_rate_service/src/app/alembic/versions/: 2023-10-08_initial.py
exchange_rate_service/src/app/api/v1/: exchange_rate.py
exchange_rate_service/src/app/core/: config.py
exchange_rate_service/src/app/daos/: exchange_rate_dao.py  providers.py
exchange_rate_service/src/app/db/: connection.py  tables.py
exchange_rate_service/src/app/dblayer/: connection.py  enums.py
exchange_rate_service/src/app/dblayer/redis/: providers.py  redis_cache.py
exchange_rate_service/src/app/depends/: get_connection_pool.py  get_course_pair.py
exchange_rate_service/src/app/migrations/: 20240206_01_cheW9-initial-migration.sql
exchange_rate_service/src/app/models/: exchange_rate_pare.py
exchange_rate_service/src/app/rabbitmq_service/: consumer.py  producer.py
exchange_rate_service/src/app/repositories/: exchange_rate.py  providers.py
exchange_rate_service/src/app/utils/: cache_decorator.py
exchange_rate_service/src/tests/: __init__.py  conftest.py
exchange_rate_service/src/tests/functional/fixtures/: create.py
exchange_rate_service/src/tests/functional/test_daos/: test_exchange_rate.py
exchange_rate_service/src/tests/functional/test_handlers/: test_data.py  (+1 more)
(+13 files in other folders)
